--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1 id="timetext"></h1>
     <script type="text/javascript">
     setInterval(function(){
-      let localizedTime = new Date().toLocaleTimeString('ja-JP')
+      let localizedTime = new Date().toLocaleTimeString('ja-JP');
       document.getElementById(("timetext") = localizedTime;
     }, 1000);
     </script>
