--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript">
     setInterval(function(){
       let localizedTime = new Date().toLocaleTimeString('ja-JP');
-      document.getElementById("timetext") = localizedTime;
+      document.getElementById("timetext").innerHTML = localizedTime;
     }, 1000);
     </script>
   </body>
