--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
-        text-color: #000;
+        color: #000;
         text-shadow: 5px 5px #fff;
       }
     </style>
