--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
-        color: #000;
-        text-shadow: 5px 5px #fff;
+        text-shadow: 0 0 3px #00FFFF, 0 0 5px #0000FF;
       }
     </style>
   </head>
