--- a/time.html
+++ b/time.html
@@ -3,7 +3,8 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
-        text-shadow: 0 0 3px #00FFFF, 0 0 5px #0000FF;
+        color: #000;
+        text-shadow: 0 0 5px #FFF;
       }
     </style>
   </head>
