--- a/time.html
+++ b/time.html
@@ -3,8 +3,8 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
-        color: #000;
-        text-shadow: 0 0 5px #FFF;
+        color: #fff;
+        text-shadow: 0 0 5px #000;
       }
     </style>
   </head>
