--- a/time.html
+++ b/time.html
@@ -3,8 +3,7 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
-        color: #fff;
-        text-shadow: 0 0 5px #000;
+        text-shadow: 0 0 3px #FFF, 0 0 5px #000;
       }
     </style>
   </head>
