--- a/time.html
+++ b/time.html
@@ -3,7 +3,7 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
-        text-shadow: 0 0 3px #FFF, 0 0 5px #000;
+        text-shadow: 0 0 3px #000, 0 0 5px #FFF;
       }
     </style>
   </head>
