--- a/time.html
+++ b/time.html
@@ -3,6 +3,7 @@
     <title>Time</title>
     <style type="text/css">
       h1 {
+        color: #fff;
         text-shadow: 0 0 3px #000, 0 0 5px #FFF;
       }
     </style>
