--- a/time.html
+++ b/time.html
@@ -4,7 +4,7 @@
     <style type="text/css">
       h1 {
         color: #fff;
-        text-shadow: 0 0 3px #000, 0 0 5px #FFF;
+        text-shadow: 0 0 3px #000, 0 0 5px #000;
       }
     </style>
   </head>
